--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -10,11 +10,6 @@
     src: url("../fonts/RajdhaniMedium.ttf")
 }
 
-html
-{
-    overflow-x: hidden;
-}
-
 body
 {
     padding: 0;
@@ -23,6 +18,7 @@ body
     overflow-x: hidden;
     background-color: #ffffff;
 }
+
 #titlebar 
 {
     position: relative;
@@ -31,6 +27,7 @@ body
     box-shadow: 0px 0 10px 0px #888;
     background-color: #ffffff;
     z-index: 5;
+    overflow-x: hidden;
 }
 
 #logo
@@ -42,6 +39,7 @@ body
     margin: 0;
     font-size: 30px;
     font-family: Azonix;
+    overflow-x: hidden;
 }
 
 #navburger
@@ -53,12 +51,14 @@ body
     top: 2px;
     left: 85%;
     transition-duration: 0.25s;
+    overflow-x: hidden;
 }
 
 #nav
 {
     height: 0px;
     transition-duration: 0.25s;
+    overflow-x: hidden;
 }
 
 #navdisplayed
@@ -70,11 +70,13 @@ body
     z-index: 4;
     background-color: #ffffff;
     transition-duration: 0.25s;
+    overflow-x: hidden;
 }
 
 #navlinkcontainer
 {
     display: none;
+    overflow-x: hidden;
 }
 
 #navlinkcontainerdisplayed
@@ -87,11 +89,13 @@ body
     flex-wrap: nowrap;
     justify-content: space-evenly;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .navlinks
 {
     display: none;
+    overflow-x: hidden;
 }
 
 .navlinksdisplayed
@@ -103,22 +107,26 @@ body
     font-size: 15px;
     font-family: Azonix;
     transition-duration: 0.25s;
+    overflow-x: hidden;
 }
 
 .navlinksdisplayed:hover
 {
     color: #292a2c;
     transition-duration: 0.25s;
+    overflow-x: hidden;
 }
 
 #aboutmelink
 {
     color: #292a2c;
+    overflow-x: hidden;
 }
 
 #portfoliolink
 {
     color: #292a2c;
+    overflow-x: hidden;
 }
 
 #aboutme
@@ -174,7 +182,7 @@ body
     height: 100%;
     display: flex;
     justify-content: space-evenly;
-    align-content: space-between;
+    align-content: space-evenly;
     flex-wrap: wrap;
     margin-top: 10%;
 }
@@ -182,8 +190,8 @@ body
 .portfoliobox
 {
     position: relative;
-    width: 350px;
-    height: 400px;
+    width: 300px;
+    height: 350px;
 }
 
 .portfoliobox img:hover
@@ -205,8 +213,8 @@ body
 .portfoliobox img
 {
     box-shadow: 0px 5px 10px 0px #888;
-    width: 350px;
-    height: 350px;
+    width: 300px;
+    height: 300px;
     transition-duration: 0.25s;
 }
 
@@ -216,6 +224,7 @@ body
     bottom: 0;
     width: 100%;
     height: 150px;
+    overflow-x: hidden;
 }
 
 #footer
@@ -225,7 +234,8 @@ body
     width: 100%;
     height: 50px;
     background-color: #f2f2f2;
-    border-top: 2px solid #e4e4e4
+    border-top: 2px solid #e4e4e4;
+    overflow-x: hidden;
 }
 
 #copyright
@@ -238,4 +248,5 @@ body
     margin: 0;
     font-size: 15px;
     font-family: Rajdhani;
+    overflow-x: hidden;
 }
